--- a/granseal_example/Cargo.toml
+++ b/granseal_example/Cargo.toml
@@ -1,3 +1,4 @@
+#![windows_subsystem ="windows"]
 [package]
 name = "granseal_example"
 version = "0.1.0"
@@ -7,6 +8,5 @@ edition = "2021"
 
 [dependencies]
 granseal_engine = {path = "../granseal_engine"}
-pollster = "0.2.5"
-winit = "0.26.1"
 rand = "0.8.5"
+
